Update JsonMetricVisitor.java
Signed-off-by: yiming <107105845+nshangyiming@users.noreply.github.com>